individual contribution: reviwing all my project
