# models/inventory.js
@@ -1,12 +1,12 @@
 const mongoose = require("mongoose");
-const { type } = require("node:os");
 
+// Schema for Inventory - DulezzuaBakery Management System (DMS)
 const InventorySchemaDMS = new mongoose.Schema({
   itemName: { type: String, required: true },
   category: { type: String, required: true },
   quantity: { type: Number, required: true },
   unit: { type: String, required: true },
-  supplier: { type: String, requires: true },
+  supplier: { type: String, required: true },
   priceByUnit: { type: Number, required: true },
   minStockrequire: { type: Number, required: true },
   lastUpdated: { type: Date, default: Date.now },
