# swagger.json
@@ -10,7 +10,7 @@
   "tags": [
     {
       "name": "Auth",
-      "description": "My login in Database of DulezzuaBakery Management System"
+      "description": "Login and Session management"
     },
     {
       "name": "Inventory",
@@ -30,14 +30,15 @@
     }
   ],
   "schemes": [
-    "https"
+    "https",
+    "http"
   ],
   "securityDefinitions": {
     "Authorization": {
       "type": "apiKey",
       "name": "Authorization",
       "in": "header",
-      "description": "Please clic on your GitHub account boton to activate your session."
+      "description": "Please click on your GitHub account button to activate your session. Copy your session token if needed."
     }
   },
   "paths": {
@@ -47,6 +48,19 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/login": {
+      "get": {
+        "tags": [
+          "Auth"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
@@ -82,13 +96,14 @@
         "tags": [
           "Inventory"
         ],
+        "summary": "Get all articles",
         "description": "",
         "produces": [
           "application/json"
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Success operation"
           },
           "500": {
             "description": "Internal Server Error"
@@ -96,7 +111,7 @@
         },
         "security": [
           {
-            "openid": []
+            "Authorization": []
           }
         ]
       },
@@ -104,8 +119,23 @@
         "tags": [
           "Inventory"
         ],
+        "summary": "Create new item",
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Add new item",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Inventory"
+            }
+          }
+        ],
         "responses": {
+          "201": {
+            "description": "Amazing"
+          },
           "400": {
             "description": "Bad Request"
           },
@@ -115,7 +145,7 @@
         },
         "security": [
           {
-            "openid": []
+            "Authorization": []
           }
         ]
       }
@@ -125,6 +155,7 @@
         "tags": [
           "Inventory"
         ],
+        "summary": "Update item",
         "description": "",
         "parameters": [
           {
@@ -132,44 +163,29 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Update existing item",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Inventory"
+            }
           }
         ],
         "responses": {
+          "200": {
+            "description": "Good Work in this ocassion"
+          },
           "400": {
             "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
-          }
-        },
-        "security": [
-          {
-            "openid": []
-          }
-        ]
-      },
-      "delete": {
-        "tags": [
-          "Inventory"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "404": {
-            "description": "Not Found"
+            "description": "Not found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -177,7 +193,41 @@
         },
         "security": [
           {
-            "openid": []
+            "Authorization": []
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "Inventory"
+        ],
+        "summary": "Delete item",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Very Good"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "Authorization": []
           }
         ]
       }
@@ -187,6 +237,7 @@
         "tags": [
           "Orders"
         ],
+        "summary": "Get all orders",
         "description": "",
         "responses": {
           "200": {
@@ -206,8 +257,23 @@
         "tags": [
           "Orders"
         ],
+        "summary": "Create new item",
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Information about new order",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Order"
+            }
+          }
+        ],
         "responses": {
+          "201": {
+            "description": "Magnificient budy"
+          },
           "400": {
             "description": "Bad Request"
           },
@@ -227,6 +293,7 @@
         "tags": [
           "Orders"
         ],
+        "summary": "Update existing order",
         "description": "",
         "parameters": [
           {
@@ -234,14 +301,32 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Information to update order",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Order"
+            }
           }
         ],
         "responses": {
+          "200": {
+            "description": "Success operation here"
+          },
           "400": {
             "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "security": [
@@ -254,6 +339,7 @@
         "tags": [
           "Orders"
         ],
+        "summary": "Delete order",
         "description": "",
         "parameters": [
           {
@@ -264,7 +350,7 @@
           }
         ],
         "responses": {
-          "204": {
+          "200": {
             "description": "All is under control"
           },
           "401": {
@@ -289,6 +375,7 @@
         "tags": [
           "Supplies"
         ],
+        "summary": "Get all supplies",
         "description": "",
         "responses": {
           "200": {
@@ -300,7 +387,7 @@
         },
         "security": [
           {
-            "openid": []
+            "Authorization": []
           }
         ]
       },
@@ -308,8 +395,23 @@
         "tags": [
           "Supplies"
         ],
+        "summary": "Create new item",
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Add new item",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Supply"
+            }
+          }
+        ],
         "responses": {
+          "201": {
+            "description": "Success operation"
+          },
           "400": {
             "description": "Bad Request"
           },
@@ -319,7 +421,7 @@
         },
         "security": [
           {
-            "openid": []
+            "Authorization": []
           }
         ]
       }
@@ -329,6 +431,7 @@
         "tags": [
           "Supplies"
         ],
+        "summary": "Update item",
         "description": "",
         "parameters": [
           {
@@ -336,19 +439,34 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Update existing item",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Supply"
+            }
           }
         ],
         "responses": {
+          "200": {
+            "description": "You did it with mastery operation."
+          },
           "400": {
             "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
           }
         },
         "security": [
           {
-            "openid": []
+            "Authorization": []
           }
         ]
       },
@@ -356,6 +474,7 @@
         "tags": [
           "Supplies"
         ],
+        "summary": "Delete supply",
         "description": "",
         "parameters": [
           {
@@ -366,7 +485,7 @@
           }
         ],
         "responses": {
-          "204": {
+          "200": {
             "description": "Success operation"
           },
           "401": {
@@ -381,7 +500,7 @@
         },
         "security": [
           {
-            "openid": []
+            "Authorization": []
           }
         ]
       }
